changes project structure and implementes services

--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -1,10 +1,24 @@
-
-<body>
-    <app-header></app-header>
+<app-header></app-header>
+<div class="landingpage">
     <h1>Welcome to videoflix</h1>
-    <div>
-        second div
+    <h3>
+        The Website to upload and watch your favourite Videoclips
+    </h3>
+    <h3>
+        Login to get access
+    </h3>
+    <div class="previewSection">
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
     </div>
-</body>
-
-
+</div>
