--- a/src/app/content/mainpage/mainpage.component.html
+++ b/src/app/content/mainpage/mainpage.component.html
@@ -1,1 +1,22 @@
-<p>mainpage works!</p>
+<div class="mainpage">
+    <h1>let's enjoy videoflix</h1>
+    <div class="previewSection">
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
+        <div class="previeItem">
+
+        </div>
+        <video width="320" height="240" controls>
+            <source src="https://heinz-friess.developerakademie.org/media/videos/gras.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
