--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<body>
+    <div class="landinghead">
+        Videoflix logo
+        <button mat-raised-button color="warn" class="loginButton" (click)="openDialog()">
+            Login
+        </button>
+    </div>
+
+</body>
+
+</html>
