--- a/src/app/content/landingpage/landingpage.component.scss
+++ b/src/app/content/landingpage/landingpage.component.scss
@@ -1,3 +1,20 @@
-body{
-    color: white;
+.landingpage{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.previewSection{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+    max-width: 1044px;
+}
+
+.previeItem{
+    width: 320px;
+    height: 180px;
+    background-color: red;
 }
