--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,10 @@ html{
     background-color: black;
 }
 
-body{
+.mainbody{
     margin: 0;
+    width: 100vw;
+    color: white;
 }
+//html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
