--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -1,3 +1,11 @@
+.head{
+    display: flex;
+    justify-content: center;
+    margin: 32px;
+    border-bottom: solid;
+    border-color: red;
+}
+
 .mainpage{
     display: flex;
     align-items: center;
@@ -14,7 +22,43 @@
 }
 
 .previeItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h3{
+        margin-block-end: 0;
+        margin-block-start: 0;
+        color: red;
+    }
+}
+
+.load{
+    height: 64;
     width: 320px;
-    height: 180px;
-    background-color: red;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.bottom{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 64px;
+    margin-left: 32px;
+    margin-right: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    border-top: solid;
+    border-color: red;
+}
+
+.uploadBtn{
+    cursor: pointer;
+    background-color: red !important;
+    font-size: 18px !important;
 }
