first web deployment

--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -8,17 +8,6 @@
         Login to get access
     </h3>
     <div class="previewSection">
-        <div class="previeItem">
-
-        </div>
-        <div class="previeItem">
-
-        </div>
-        <div class="previeItem">
-
-        </div>
-        <div class="previeItem">
-
-        </div>
+        <img src="./../../../assets/img/tv-5837826_1920.jpg" class="mainpic">
     </div>
 </div>
