--- a/src/app/content/landingpage/landingpage.component.scss
+++ b/src/app/content/landingpage/landingpage.component.scss
@@ -13,8 +13,6 @@
     max-width: 1044px;
 }
 
-.previeItem{
-    width: 320px;
-    height: 180px;
-    background-color: red;
+.mainpic{
+    max-width: 1040px;
 }
