--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -1,21 +1,34 @@
-<mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
 <h2 mat-dialog-title>Login</h2>
 <mat-dialog-content class="mat-typography">
-  <div style="padding-top: 12px;">
-    <mat-form-field appearance="outline" class="mr16">
-      <mat-label>Username</mat-label>
-      <input [(ngModel)]="username" matInput placeholder="First name">
-    </mat-form-field>
-  </div>
-  <div>
-    <mat-form-field appearance="outline" class="mr16">
-      <mat-label>Password</mat-label>
-      <input [(ngModel)]="password" matInput placeholder="E-Mail">
-    </mat-form-field>
-  </div>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <div style="padding-top: 12px;">
+      <mat-form-field appearance="outline" class="mr16">
+        <mat-label>Username</mat-label>
+        <input formControlName="username" matInput placeholder="username">
+        <mat-error *ngIf="loginForm.controls['username'].invalid && loginForm.controls['username'].touched">
+          Please enter a valid username
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="mr16">
+        <mat-label>Password</mat-label>
+        <input formControlName="password" matInput placeholder="Password" type="password">
+        <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+          Please enter a valid password
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <mat-dialog-actions align="center">
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button type="submit" [disabled]="loginForm.invalid"
+        [mat-dialog-close]="loginForm.valid">Login</button>
+    </mat-dialog-actions>
+  </form>
 </mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-button [disabled]="loading" [mat-dialog-close]="true" (click)="register()">Register</button>
-  <button mat-button [disabled]="loading" mat-dialog-close>Cancel</button>
-  <button mat-button [disabled]="loading" [mat-dialog-close]="true" (click)="login()" cdkFocusInitial>Save</button>
-</mat-dialog-actions>
+<mat-dialog-content class="mat-typography">
+  <h4>Create Account</h4>
+  <mat-dialog-actions align="center">
+    <button mat-button [mat-dialog-close]="true" (click)="register()">Register</button>
+  </mat-dialog-actions>
+</mat-dialog-content>
