--- a/src/app/register-dialog/register-dialog.component.html
+++ b/src/app/register-dialog/register-dialog.component.html
@@ -1,25 +1,36 @@
 <h2 mat-dialog-title>Register</h2>
 <mat-dialog-content class="mat-typography">
-  <div style="padding-top: 12px;">
-    <mat-form-field appearance="outline" class="mr16">
-      <mat-label>Username</mat-label>
-      <input [(ngModel)]="username" matInput placeholder="First name">
-    </mat-form-field>
-  </div>
-  <div>
-    <mat-form-field appearance="outline" class="mr16">
-      <mat-label>E-Mail</mat-label>
-      <input [(ngModel)]="email" matInput placeholder="E-Mail">
-    </mat-form-field>
-  </div>
-  <div>
-    <mat-form-field appearance="outline" class="mr16">
-      <mat-label>Password</mat-label>
-      <input [(ngModel)]="password" matInput placeholder="E-Mail">
-    </mat-form-field>
-  </div>
+  <form [formGroup]="loginForm" (ngSubmit)="register()">
+    <div style="padding-top: 12px;">
+      <mat-form-field appearance="outline" class="mr16">
+        <mat-label>Username</mat-label>
+        <input formControlName="username" matInput placeholder="username">
+        <mat-error *ngIf="loginForm.controls['username'].invalid && loginForm.controls['username'].touched">
+          Please enter a valid username
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="mr16">
+        <mat-label>E-Mail</mat-label>
+        <input formControlName="email" matInput placeholder="E-Mail">
+        <mat-error *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
+          Please enter a valid email
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="mr16">
+        <mat-label>Password</mat-label>
+        <input formControlName="password" matInput placeholder="Password" type="password">
+        <mat-error *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+          Please enter a valid password (min 6 characters)
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <mat-dialog-actions align="center">
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button type="submit" [disabled]="loginForm.invalid" [mat-dialog-close]="loginForm.valid">Register</button>
+    </mat-dialog-actions>
+  </form>
 </mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" (click)="register()" cdkFocusInitial>Register</button>
-</mat-dialog-actions>
