--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,7 @@ html{
 }
 //html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.message{
+    height: 140px;
+}
