--- a/src/app/content/imprint/imprint.component.html
+++ b/src/app/content/imprint/imprint.component.html
@@ -1,19 +1,17 @@
-<body>
-    <a routerLink="/">Back to the Landingpage</a>
-    <div class="padLeftRight150px height80percent">
-        <h1>Imprint</h1>
-        <h2>Angaben gemäß § 5 TMG</h2>
-        <p>Heinz Friess<br>
-            Software Development<br>
-            Reiherstr. 11<br>
-            73760 Ostfildern</p>
+<div class="padLeftRight150px height80percent colorblack">
+    <h1>Imprint</h1>
+    <h2>Angaben gemäß § 5 TMG</h2>
+    <p>Heinz Friess<br>
+        Software Development<br>
+        Reiherstr. 11<br>
+        73760 Ostfildern</p>
 
-        <h2>Kontakt</h2>
-        <p>Telefon: +49 (0) 172 4825725<br>
-            E-Mail: turbolupi@web.de@web.de</p>
+    <h2>Kontakt</h2>
+    <p>Telefon: +49 (0) 172 4825725<br>
+        E-Mail: turbolupi@web.de@web.de</p>
 
-    </div>
-</body>
+</div>
+
 
 
 
@@ -36,17 +34,19 @@ Responsible for Content according to § 55 Abs. 2 RStV
 
 Disclaimer
 
-All content on this website has been carefully checked. Nevertheless, we assume no liability for the accuracy, completeness, and timeliness of the provided information.
+All content on this website has been carefully checked. Nevertheless, we assume no liability for the accuracy,
+completeness, and timeliness of the provided information.
 
 Copyright
 
-The content and works on this website are subject to German copyright law. The reproduction, editing, distribution, and any kind of use beyond the limits of copyright require the written consent of the respective author or creator.
+The content and works on this website are subject to German copyright law. The reproduction, editing, distribution, and
+any kind of use beyond the limits of copyright require the written consent of the respective author or creator.
 
 Liability for Links
 
-Our website contains links to third-party external websites whose content we have no influence over. The respective provider or operator of the pages is always responsible for the content of the linked pages.
+Our website contains links to third-party external websites whose content we have no influence over. The respective
+provider or operator of the pages is always responsible for the content of the linked pages.
 
 Contact
 
 If you have any questions or comments regarding the imprint, please contact us at [Email Address].
-
