--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -7,6 +7,9 @@
     <h3>
         Login to get access
     </h3>
+    <button mat-raised-button color="warn" class="loginButton" (click)="openDialog()">
+        Login
+    </button>
     <div class="previewSection">
         <img src="./../../../assets/img/tv-5837826_1920.jpg" class="mainpic">
     </div>
