--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,11 +2,8 @@
 <html lang="en">
 
 <body>
-    <div class="landinghead">
+    <div class="head">
         Videoflix logo
-        <button mat-raised-button color="warn" class="loginButton" (click)="openDialog()">
-            Login
-        </button>
     </div>
 
 </body>
