--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,9 +1,9 @@
-.landinghead{
+.head{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 24px;
-    max-width: 1440px;    
+    justify-content: center;
+    margin: 32px;
+    border-bottom: solid;
+    border-color: red;
 }
 
 .loginButton{
