--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .message{
     height: 140px;
 }
+
+.colorblack{
+    color: black;
+}
