--- a/src/app/content/mainpage/mainpage.component.html
+++ b/src/app/content/mainpage/mainpage.component.html
@@ -1,8 +1,6 @@
-<div class="head">
-    <h1>let's enjoy videoflix</h1>
-</div>
+<app-header></app-header>
 <div class="mainpage">
-
+    <h1>lets enjoy videoflix</h1>
     <div *ngIf=loading class="load">
         <h3>
             loading.....
@@ -24,15 +22,5 @@
         </div>
     </div>
 </div>
-<div class="bottom">
-    <div>
-        <button mat-raised-button color="warn" class="uploadBtn" (click)="Logout()">
-            Logout
-        </button>
-    </div>
-    <div>
-        <button mat-raised-button color="warn" class="uploadBtn" (click)="openDialog()">
-            Upload
-        </button>
-    </div>
-</div>
+<button (click)="Logout()">LogOut</button>
+<app-footer></app-footer>
