--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,14 +1,9 @@
 <div class="bottom">
-    <div>
-        <a routerLink="/imprint">Imprint</a>
-        <button mat-raised-button color="warn" class="uploadBtn" (click)="openImprint()">
-            Imprint
-        </button>
+    <div class="left">
+        Copyright HF
     </div>
-    <div>
-        <a routerLink="/privacypolicy">Privacy Policy</a>
-        <button mat-raised-button color="warn" class="uploadBtn" (click)="openLegalNotice()">
-            Privacy Policy
-        </button>
+    <div class="right">
+        <a (click)="openImprint()">Imprint</a>
+        <a (click)="openLegalNotice()">Privacy Policy</a>
     </div>
 </div>
