finished imprint ans privacy policy

--- a/src/app/content/landingpage/landingpage.component.scss
+++ b/src/app/content/landingpage/landingpage.component.scss
@@ -5,6 +5,7 @@
 }
 
 .previewSection{
+    padding-top: 32px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -14,5 +15,5 @@
 }
 
 .mainpic{
-    max-width: 1040px;
+    max-width: 70%;
 }
