--- a/src/app/content/imprint/imprint.component.html
+++ b/src/app/content/imprint/imprint.component.html
@@ -1,12 +1,16 @@
-<div class="padLeftRight150px height80percent colorblack">
-    <h1>Imprint</h1>
-    <h2>Angaben gemäß § 5 TMG</h2>
+<div class="padLeftRight150px height80percent colorblack infodialog">
+    <div class="infohead">
+        <h1>Imprint</h1>
+        <a [mat-dialog-close]="true">X</a>
+    </div>
+    
+    <h3>Angaben gemäß § 5 TMG</h3>
     <p>Heinz Friess<br>
         Software Development<br>
         Reiherstr. 11<br>
         73760 Ostfildern</p>
 
-    <h2>Kontakt</h2>
+    <h3>Kontakt</h3>
     <p>Telefon: +49 (0) 172 4825725<br>
         E-Mail: turbolupi@web.de@web.de</p>
 
