--- a/src/app/content/privacy-policy/privacy-policy.component.html
+++ b/src/app/content/privacy-policy/privacy-policy.component.html
@@ -1,44 +1,47 @@
-<div class="colorblack">
-    <h1>Privacy Policy</h1>
-
-    This privacy policy informs you about the nature, scope, and purpose of the collection and use of personal data on
-    this website.
+<div class="colorblack infodialog">
+    <div class="infohead">
+        <h1>Privacy Policy</h1>
+        <a [mat-dialog-close]="true">X</a>
+    </div>
+    <p>This privacy policy informs you about the nature, scope, and purpose of the collection and use of personal data
+        on
+        this website.</p>
 
     <h3>Data Controller</h3>
-
-    [Name/Company/Address]
-    [Phone Number]
-    [Email Address]
-    [Website URL]
-
+    <p>
+        Heinz Friess
+        friess.heinz@gmx.de
+        videoflix.heinzfriess.com
+    </p>
     <h3>Types of Data Collected</h3>
-
-    We collect and use personal data that you voluntarily provide to us, such as through filling out contact forms or
-    registering for services. The collected data may include: name, email address, address, phone number, etc.
-
+    <p>
+        We collect and use personal data that you voluntarily provide to us, such as through filling out contact forms
+        or
+        registering for services. The collected data may include: name, email address, address, phone number, etc.
+    </p>
     <h3>Purpose of Data Processing</h3>
-
-    The personal data you provide is used for the following purposes: processing inquiries, providing services, sending
-    newsletters, etc.
-
+    <p>
+        The personal data you provide is used for the following purposes: processing inquiries, providing services, sending
+        newsletters, etc.
+    </p>
     <h3>Data Disclosure</h3>
-
-    We do not disclose your personal data to third parties unless required to fulfill legal obligations.
-
+    <p>
+        We do not disclose your personal data to third parties unless required to fulfill legal obligations.
+    </p>
     <h3>Your Rights</h3>
-
-    You have the right to access, correct, delete, or restrict the processing of your personal data.
-
+    <p>
+        You have the right to access, correct, delete, or restrict the processing of your personal data.
+    </p>
     <h3>Data Security</h3>
-
-    We take appropriate security measures to protect your data from unauthorized access, loss, misuse, or alteration.
-
+    <p>
+        We take appropriate security measures to protect your data from unauthorized access, loss, misuse, or alteration.
+    </p>
     <h3>Changes to this Privacy Policy</h3>
-
-    This privacy policy may be updated. The current version will be published on our website.
-
+    <p>
+        This privacy policy may be updated. The current version will be published on our website.
+    </p>
     <h3>Contact Us</h3>
-
-    If you have any questions about this privacy policy, please contact us at [Email Address].
-
+    <p>
+        If you have any questions about this privacy policy, please contact us at hf@heinzfriess.com.
+    </p>
 </div>
