--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="bottom">
     <div class="left">
-        Copyright HF
+        &copy;  Heinz Friess 2024
     </div>
     <div class="right">
         <a (click)="openImprint()">Imprint</a>
