--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
 
 <body>
     <div class="head">
-        Videoflix logo
+        <img src="./../../../assets/img/vidoeflix.png" alt="">
     </div>
 
 </body>
