--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="landingpage">
     <h1>Welcome to videoflix</h1>
-    <h3>
+    <h3 style="max-width: 80%;">
         The Website to upload and watch your favourite Videoclips
     </h3>
     <h3>
