--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -15,6 +15,9 @@
         background: black;
         cursor: pointer;
         margin-top: 12px;
+        border-radius: 10px;
+        margin-left: 12px;
+        font-size: 10px;
     }
 }
 
