--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -15,9 +15,9 @@
         background: black;
         cursor: pointer;
         margin-top: 12px;
-        border-radius: 10px;
+        border-radius: 3px;
         margin-left: 12px;
-        font-size: 10px;
+        border:2px solid red;
     }
 }
 
@@ -35,10 +35,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
     h3{
         margin-block-end: 0;
         margin-block-start: 0;
         color: red;
+        font-size: 22px;
     }
 }
 
@@ -62,6 +64,26 @@
 
 .menu{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 90%;
+    padding-bottom: 32px;
+}
+
+.backBtn{
+    width: 96px;
+    height: 32px;
+    font-size: 16px !important;
+}
+
+.menuBtn{
+    width: 96px;
+    height: 32px;
+    font-size: 16px !important;
+}
+
+.videosection{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
