Guest Login added

--- a/src/app/content/imprint/imprint.component.html
+++ b/src/app/content/imprint/imprint.component.html
@@ -4,53 +4,40 @@
         <a [mat-dialog-close]="true">X</a>
     </div>
     
-    <h3>Angaben gemäß § 5 TMG</h3>
+    <h3>Represented by</h3>
     <p>Heinz Friess<br>
         Software Development<br>
         Reiherstr. 11<br>
         73760 Ostfildern</p>
+    
+    <h3>Responsible for Content according to § 55 Abs. 2 RStV</h3>
+    <p>
+        Heinz Friess
+    </p>
+    <h3>VAT Identification Number</h3>
+    <p>
+        [VAT Identification Number in accordance with § 27a of the German Value Added Tax Act, if applicable]
+    </p>
+    <h3>Disclaimer</h3>
+    <p>
+        All content on this website has been carefully checked. Nevertheless, we assume no liability for the accuracy,
+        completeness, and timeliness of the provided information. 
+    </p>
+    <h3>Copyright</h3>
+    <p>
+        The content and works on this website are subject to German copyright law. The reproduction, editing, distribution, and
+        any kind of use beyond the limits of copyright require the written consent of the respective author or creator.
+    </p>
+    <h3>Liability for Links</h3>
+    <p>
+        Our website contains links to third-party external websites whose content we have no influence over. The respective
+        provider or operator of the pages is always responsible for the content of the linked pages.
 
-    <h3>Kontakt</h3>
+    </p>
+    <h3>Contact</h3>
     <p>Telefon: +49 (0) 172 4825725<br>
-        E-Mail: turbolupi@web.de@web.de</p>
-
+        If you have any questions or comments regarding the imprint, please contact us at
+        E-Mail: hf@heinzfriess.com</p>
 </div>
 
 
-
-
-Represented by
-
-[Name of Authorized Representative]
-
-Register Entry
-
-[Registration Number, if applicable]
-[Registration Court, if applicable]
-
-VAT Identification Number
-
-[VAT Identification Number in accordance with § 27a of the German Value Added Tax Act, if applicable]
-
-Responsible for Content according to § 55 Abs. 2 RStV
-
-[Name of the Responsible Person]
-
-Disclaimer
-
-All content on this website has been carefully checked. Nevertheless, we assume no liability for the accuracy,
-completeness, and timeliness of the provided information.
-
-Copyright
-
-The content and works on this website are subject to German copyright law. The reproduction, editing, distribution, and
-any kind of use beyond the limits of copyright require the written consent of the respective author or creator.
-
-Liability for Links
-
-Our website contains links to third-party external websites whose content we have no influence over. The respective
-provider or operator of the pages is always responsible for the content of the linked pages.
-
-Contact
-
-If you have any questions or comments regarding the imprint, please contact us at [Email Address].
