--- a/src/app/content/landingpage/landingpage.component.scss
+++ b/src/app/content/landingpage/landingpage.component.scss
@@ -17,3 +17,25 @@
 .mainpic{
     max-width: 70%;
 }
+
+
+
+.text {
+    display: none;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.blinking {
+    animation: blink 1.5s infinite;
+}
