design landingpage update

--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -1,15 +1,18 @@
 <app-header></app-header>
 <div class="landingpage">
     <h1>Welcome to videoflix</h1>
-        <p id="blinkingText" >{{ texts[currentIndex] }}</p>     
-    <button mat-raised-button color="warn" class="loginButton" (click)="openDialog()">
-        Login
-    </button>
-    <button mat-raised-button color="warn" class="loginButton" (click)="guestLogin()">
-        Guest Login
-    </button>
+    <p id="blinkingText">{{ texts[currentIndex] }}</p>
+
     <div class="previewSection">
         <img src="./../../../assets/img/tv-5837826_1920.jpg" class="mainpic">
+    </div>
+    <div class="enterButtons">
+        <button  class="loginButton" (click)="openDialog()">
+            Login
+        </button>
+        <button  class="loginButton" (click)="guestLogin()">
+            Guest Login
+        </button>
     </div>
 </div>
 <app-footer></app-footer>
