--- a/src/app/content/landingpage/landingpage.component.scss
+++ b/src/app/content/landingpage/landingpage.component.scss
@@ -18,6 +18,25 @@
     max-width: 70%;
 }
 
+.loginButton{
+    height: 32px;
+    font-size: 16px !important;
+    cursor: pointer;
+    color: white !important;
+    background: black;
+    margin-top: 12px;
+    border-radius: 3px;
+    margin-left: 12px;
+    border: 2px solid red;
+    
+}
+
+.enterButtons{
+    display: flex;
+    justify-content: space-between;
+    width: 320px;
+    padding: 32px;
+}
 
 
 .text {
