finished guest login

--- a/src/app/content/imprint/imprint.component.html
+++ b/src/app/content/imprint/imprint.component.html
@@ -37,7 +37,7 @@
     <h3>Contact</h3>
     <p>Telefon: +49 (0) 172 4825725<br>
         If you have any questions or comments regarding the imprint, please contact us at
-        E-Mail: hf@heinzfriess.com</p>
+        E-Mail: hf&#64;heinzfriess.com</p>
 </div>
 
 
