--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -26,7 +26,7 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 24px;
+    gap: 12px;
     max-width: 1044px;
     
 }
@@ -35,13 +35,48 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: transform .5s;
+    position: relative;
+    box-shadow:  0px 0px 10px 8px black;
+}
+
+h3{
+    margin-block-end: 0;
+    margin-block-start: 0;
+    font-size: 22px;
+    text-shadow: 3px, 3px, 3px, rgb(28, 29, 28);
+}
+
+.playBtn{
     cursor: pointer;
-    h3{
-        margin-block-end: 0;
-        margin-block-start: 0;
-        color: red;
-        font-size: 22px;
-    }
+}
+
+.previeItem:hover {
+    transform: scale(1.15);
+    z-index: 20;
+}
+
+.hidden {
+    position: absolute;
+    top: 0;
+    left: 24px; 
+    //transform: translateX(-50%); 
+    padding: 10px;
+    border-radius: 5px;
+    opacity: 0; 
+    transition: opacity 0.4s ease-in-out; 
+}
+
+.previeItem:hover .hidden {
+    opacity: 1;
+}
+
+.previeItem:hover h3 {
+    visibility: hidden;
+}
+
+.previeItem:hover .hidden h3 {
+    visibility: visible; 
 }
 
 .load{
