implemented category for upload

--- a/src/app/content/imprint/imprint.component.html
+++ b/src/app/content/imprint/imprint.component.html
@@ -7,7 +7,7 @@
     <h3>Represented by</h3>
     <p>Heinz Friess<br>
         Software Development<br>
-        Reiherstr. 11<br>
+        Reyherstr. 11<br>
         73760 Ostfildern</p>
     
     <h3>Responsible for Content according to § 55 Abs. 2 RStV</h3>
