--- a/src/app/content/privacy-policy/privacy-policy.component.html
+++ b/src/app/content/privacy-policy/privacy-policy.component.html
@@ -9,20 +9,18 @@
 
     <h3>Data Controller</h3>
     <p>
-        Heinz Friess
-        friess.heinz@gmx.de
-        videoflix.heinzfriess.com
+        Heinz Friess<br>
+        hf@heinzfriess.com
     </p>
     <h3>Types of Data Collected</h3>
     <p>
         We collect and use personal data that you voluntarily provide to us, such as through filling out contact forms
         or
-        registering for services. The collected data may include: name, email address, address, phone number, etc.
+        registering for services. The collected data may include: name, email address.
     </p>
     <h3>Purpose of Data Processing</h3>
     <p>
-        The personal data you provide is used for the following purposes: processing inquiries, providing services, sending
-        newsletters, etc.
+        The personal data you provide is used for the following purposes: processing inquiries, providing services.
     </p>
     <h3>Data Disclosure</h3>
     <p>
