Style update horizontal scroll

--- a/src/app/content/mainpage/mainpage.component.html
+++ b/src/app/content/mainpage/mainpage.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="mainpage">
-    
+
     <div class="menu" *ngIf="!play">
         <button class="menuBtn" (click)="logout()">LogOut</button>
         <button class="menuBtn" (click)="openDialog()" *ngIf="loggedIn && !guest">Upload</button>
@@ -13,23 +13,40 @@
         <mat-progress-bar mode="buffer"></mat-progress-bar>
     </div>
     <div *ngIf="!loading && !play" class="previewSection">
-        <div *ngFor="let video of videos; index as i" class="previeItem" (click)="playVideo(video)">
-            <img class="pictureFrame" src="{{ video.video_fileThumbnail }}" alt="">
-             <div class="hidden">
-                <h3>
-                    {{ video.title }}
-                </h3>
-                <h5>
-                    {{ video.description }}
-                </h5>
-                <img class="playBtn" src="../../../assets/img/play-3-32.png" alt="">
+        <div class="category" *ngFor="let category of categoriesVideoKeys(); let j = index">
+            <h1>{{ category }}</h1>
+            <div class="category-wrapper">
+                <button class="scroll-button left" (mouseenter)="scrollLeft(j)" (mouseleave)="stopContinuousScrolling()">&#8249;</button>
+                <div class="categorysection" #categorysections>
+                    <div class="previeItem" *ngFor="let video of categories[category]; index as i"
+                        (click)="playVideo(video)">
+                        <img class="pictureFrame" src="{{ video.video_fileThumbnail }}" alt="">
+                        <div class="hidden">
+                            <h3>
+                                {{ video.title }}
+                            </h3>
+                            <h5>
+                                {{ video.description }}
+                            </h5>
+                            <img class="playBtn" src="../../../assets/img/play-3-32.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <button class="scroll-button right" (mouseenter)="scrollRight(j)" (mouseleave)="stopContinuousScrolling()">&#8250;</button>
             </div>
         </div>
+
     </div>
     <div class="videosection" *ngIf="!loading && play">
         <div class="menu">
             <button (click)="stopVideo()" class="backBtn">back</button>
         </div>
+        <h3>
+            {{ title }}
+        </h3>
+        <h5>
+            {{ description }}
+        </h5>
         <video width="480" controls autoplay>
             <source src="{{ file }}" type="video/mp4">
             Your browser does not support the video tag.
