--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -14,30 +14,45 @@
         color: white;
         background: black;
         cursor: pointer;
-        margin-top: 12px;
         border-radius: 3px;
-        margin-left: 12px;
         border:2px solid red;
     }
 }
 
 .previewSection{
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 12px;
-    max-width: 1044px;
-    
+    flex-direction: column;
+    width: 90%;    
 }
 
-.previeItem{
+.categorysection{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    gap: 16px;
+    padding-bottom: 16px;
+    padding-top: 16px;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    margin-bottom: 16px;
+    //background-color: gray;
+}
+
+.categorysection::-webkit-scrollbar{
+    width: 0px;
+}
+
+.category-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+.previeItem{
+    //width: 22%;
     transition: transform .5s;
     position: relative;
-    box-shadow:  0px 0px 10px 8px black;
+    //box-shadow:  0px 0px 10px 8px black;
+    
 }
 
 h3{
@@ -60,7 +75,6 @@ h3{
     position: absolute;
     top: 0;
     left: 24px; 
-    //transform: translateX(-50%); 
     padding: 10px;
     border-radius: 5px;
     opacity: 0; 
