--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    position: relative;
     button{
         color: white;
         background: black;
@@ -23,6 +24,8 @@
     display: flex;
     flex-direction: column;
     width: 90%;    
+    position: relative;
+    overflow: hidden;
 }
 
 .categorysection{
@@ -34,7 +37,6 @@
     overflow-x: auto;
     overscroll-behavior-inline: contain;
     margin-bottom: 16px;
-    //background-color: gray;
 }
 
 .categorysection::-webkit-scrollbar{
@@ -43,9 +45,15 @@
 
 .category-wrapper {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    gap: 16px;
   }
+
+.scrollButton{
+    position: relative;
+    height: 124px;
+    top: 44px;
+    opacity: 0.6;
+}
 
 .previeItem{
     //width: 22%;
@@ -136,3 +144,23 @@ h3{
     flex-direction: column;
     align-items: center;
 }
+
+.background-video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1; /* Ensure the video is behind other content */
+  }
+  
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
