--- a/src/app/content/mainpage/mainpage.component.scss
+++ b/src/app/content/mainpage/mainpage.component.scss
@@ -53,15 +53,16 @@
     position: relative;
     height: 124px;
     top: 44px;
-    opacity: 0.6;
+    opacity: 0.25;
+    transition: opacity 0.2s ease-in-out;
+    &:hover{
+        opacity: 0.8; 
+    }
 }
 
 .previeItem{
-    //width: 22%;
-    transition: transform .5s;
-    position: relative;
-    //box-shadow:  0px 0px 10px 8px black;
-    
+    transition: transform  0.5s;
+    position: relative;    
 }
 
 h3{
@@ -165,5 +166,40 @@ h3{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 0.4;
   }
+
+  @media (max-width:720px){
+
+    .pictureFrame{
+        width: 240px;
+        height: 125px;
+    }
+
+    h1{
+        font-size: 20px;
+    }
+
+    .menuBtn{
+        width: 72px;
+        height: 24px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width:580px){
+
+    .pictureFrame{
+        width: 160px;
+        height: 90px;
+    }
+
+    .scrollButton{
+        display: none;
+    }
+
+    h1{
+        font-size: 16px;
+    }
+}
   
