--- a/src/app/content/landingpage/landingpage.component.html
+++ b/src/app/content/landingpage/landingpage.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
 <div class="landingpage">
     <h1>Welcome to videoflix</h1>
-    <p id="blinkingText">{{ texts[currentIndex] }}</p>
-
+    <div class="blinkingTextDiv">
+        <p id="blinkingText">{{ texts[currentIndex] }}</p>
+    </div>
     <div class="previewSection">
         <img src="./../../../assets/img/tv-5837826_1920.jpg" class="mainpic">
     </div>
